# pattern_benchmarks

./: README.md  benchmarks.cabal
generator/: GenMain.hs  PatternGenerator.hs
results/: res_inline.html  res_noinline.html
src/: Aug.hs  Main.hs  PatternGenerator.hs  Tree.hs  Types.hs
src/BenchBase/: BaseAug.hs  BaseBenchs.hs  BaseTree.hs
