name:                benchmarks
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/benchmarks#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md


executable benchmarks
  hs-source-dirs:      src, generated
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
        split, deepseq, criterion, bytestring, text, containers, prettyprinter, random, random-shuffle, MonadRandom
  other-modules:       Tree, Aug, Types, GeneratedTree, GeneratedAug, GeneratedBenchs
  ghc-options:         -O2 -rtsopts -threaded

executable pattern-generator
  hs-source-dirs:      generator
  main-is:             GenMain.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
        split, deepseq, criterion, bytestring, text, containers, prettyprinter, random, random-shuffle, MonadRandom
  other-modules:       PatternGenerator
  ghc-options:         -O -rtsopts -threaded

